--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="description" content="#"/>
   <link rel="stylesheet" href="assets/css/style.css"/>
-  <title>exercice 1 partie 2</title>
+  <title>exercice 3 partie 2</title>
 </head>
 <body>
-<img src="assets/image/iceland.jpg" alt="contrée islandaise" onmouseover="réduireImage()"id="photo" >
+<img src="assets/image/iceland.jpg" alt="contrée islandaise" onmouseover="reduceImage()"id="photo" >
 <script src="assets/js/script.js"></script>
 </body>
 </html>
